--- a/.github/workflows/deploywhat.yml
+++ b/.github/workflows/deploywhat.yml
@@ -21,4 +21,5 @@ jobs:
             git pull origin main
             ./gradlew clean build
             sudo fuser -k -n tcp 8080 || true
+#            쓰니까안됐나
             nohup java -jar build/libs/*SNAPSHOT.jar > ./output.log 2>&1 &
