--- a/.github/workflows/deployactions.yml
+++ b/.github/workflows/deployactions.yml
@@ -33,7 +33,7 @@ jobs:
       - name: scp로 ec2에 빌드 파일 전송하기
         uses: appleboy/scp-action@v0.1.7
         with:
-          host: ${{ secrets.HOST }}
+          host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           source: project.jar
