--- a/.github/workflows/deployactions.yml
+++ b/.github/workflows/deployactions.yml
@@ -52,5 +52,5 @@ jobs:
             mv /home/ubuntu/api/tobe/project.jar /home/ubuntu/api/current
             cd /home/ubuntu/api/current
             sudo fuser -k -n tcp 8080 || true
-            nohup java -jar project.jar > .output.log 2>1& &
+            nohup java -jar project.jar > .output.log 2>&1 &
             rm -rf /home/ubuntu/api/tobe
